--- a/src/TwitchPlaysChessDotCom.csproj
+++ b/src/TwitchPlaysChessDotCom.csproj
@@ -8,6 +8,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <NoWarn>$(NoWarn);1591</NoWarn>
+        <RootNamespace>TwitchPlaysChess</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
